Ticket #28304: Ensure that abstract property can be changed incremental.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1480,6 +1480,10 @@ com.top_logic.element.model.diff.config.RenamePart.part.tooltip = Der qualifizie
 com.top_logic.element.model.diff.config.RenamePart.tooltip = Umbenennung eines <i>Modellteils</i>.
 com.top_logic.element.model.diff.config.SetAnnotations = Annotationen festlegen
 com.top_logic.element.model.diff.config.SetAnnotations.tooltip = Beschreibt die Einstellung von <i>Annotationen</i> zu einem <i>Modellteil</i>.
+com.top_logic.element.model.diff.config.UpdateAbstract = Update abstrakt
+com.top_logic.element.model.diff.config.UpdateAbstract.abstract = Abstrakt
+com.top_logic.element.model.diff.config.UpdateAbstract.abstract.tooltip = Der neue abstrakte Zustand.
+com.top_logic.element.model.diff.config.UpdateAbstract.tooltip = Aktualisierung des Zustands <code>abstract</code> eines <i>strukturierten Teils</i>.
 com.top_logic.element.model.diff.config.UpdateBag = Update Tasche
 com.top_logic.element.model.diff.config.UpdateBag.bag = Tasche
 com.top_logic.element.model.diff.config.UpdateBag.bag.tooltip = Der neue Taschenzustand.
