--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1480,6 +1480,10 @@ com.top_logic.element.model.diff.config.RenamePart.part.tooltip = The qualified 
 com.top_logic.element.model.diff.config.RenamePart.tooltip = Renaming of a <i>model part</i>.
 com.top_logic.element.model.diff.config.SetAnnotations = Set annotations
 com.top_logic.element.model.diff.config.SetAnnotations.tooltip = Describes the setting of <i>annotations</i> to a <i>model part</i>.
+com.top_logic.element.model.diff.config.UpdateAbstract = Update abstract
+com.top_logic.element.model.diff.config.UpdateAbstract.abstract = Abstract
+com.top_logic.element.model.diff.config.UpdateAbstract.abstract.tooltip = The new abstract state.
+com.top_logic.element.model.diff.config.UpdateAbstract.tooltip = Update of the <code>abstract</code> state of a <i>structured type part</i>.
 com.top_logic.element.model.diff.config.UpdateBag = Update bag
 com.top_logic.element.model.diff.config.UpdateBag.bag = Bag
 com.top_logic.element.model.diff.config.UpdateBag.bag.tooltip = The new bag state.
