Ticket #28310: Added "saveClosesDialog" to advance process view.
Enhanced layout and I18N of view options.

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -155,6 +155,8 @@ com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.context.toolti
 com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.function = Funktion
 com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.function.tooltip = Der <i>Ausdruck</i>, der zur Berechnung des <i>Startereignisses</i> verwendet wird. <p> Der <i>Ausdruck</i> verwendet den Kontext als einziges Argument. </p> <p> Als Rückgabe wird ein <i>Startereignis</i> erwartet. </p>
 com.top_logic.bpe.layout.execution.start.DynamicStartEvent.tooltip = <i>Selektor für das Startereignis</i>, der ein dynamisches Startereignis unter Verwendung einer Funktion mit gegebenem Kontext berechnet.
+com.top_logic.bpe.layout.execution.start.ModelAsStartEvent = Modell als Startereignis
+com.top_logic.bpe.layout.execution.start.ModelAsStartEvent.tooltip = <i>Start-Ereignis-Selektor</i>, der das Modell der Komponente als <i>Startereignis</i> verwendet.
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming$BPMLObjectName = BPML-Objektname
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming$BPMLObjectName.tooltip = <i>Modellname</i> der <i>Benennung des BPML-Objekts</i>.
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming.BPMLObjectName.node-path = Knoten-Pfad
