--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -155,6 +155,8 @@ com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.context.toolti
 com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.function = Function
 com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.function.tooltip = The <i>expression</i> used to calculate the <i>start event</i>. <p> The <i>expression</i> uses the context as the only argument. </p> <p> A <i>start event</i> is expected as the return. </p>
 com.top_logic.bpe.layout.execution.start.DynamicStartEvent.tooltip = <i>Start event selector</i> that calculates a dynamic start event using a function with given context.
+com.top_logic.bpe.layout.execution.start.ModelAsStartEvent = Model as start event
+com.top_logic.bpe.layout.execution.start.ModelAsStartEvent.tooltip = <i>Start event selector</i> using the component's model as <i>start event</i>.
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming$BPMLObjectName = BPML object name
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming$BPMLObjectName.tooltip = <i>Model name</i> of the <i>BPML object naming</i>.
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming.BPMLObjectName.node-path = Node path
