Ticket #28310: Cleanup of advance process dialog.
* Use internationalized edge labels.
* Allow to configure tooltips for transitions.
* Allow to order transitions with weights.
* Reduced chaos (Set<Edge[]>), compute things once.

--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/tl-bpe.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/tl-bpe.messages_de.properties
@@ -1,5 +1,5 @@
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.icon = theme:ICONS_DIALOG_QUESTION
-class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.input = N‰chste Aufgabe
+class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.input = Weiter mit
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.message = Die aktuelle Aufgabe wird abgeschlossen.
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.title = Aufgabe abschlieﬂen
 class.com.top_logic.bpe.bpml.display.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = Am Attribut "{0}" wurde keine Modelltyp Annotation gefunden.
