--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/tl-bpe.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/tl-bpe.messages_en.properties
@@ -1,5 +1,5 @@
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.icon = theme:ICONS_DIALOG_QUESTION
-class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.input = Next task
+class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.input = Continue with
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.message = You want to finish the task?
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.SELECT_TRANSITION_DIALOG.title = Finish task
 class.com.top_logic.bpe.bpml.display.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = No model type annotation found at attribute "{0}".
