Ticket #28386: Fixed JavaDoc.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2963,7 +2963,7 @@ com.top_logic.layout.form.boxes.reactive_tag.Icons.COLON = Ob ein Doppelpunkt na
 com.top_logic.layout.form.boxes.reactive_tag.Icons.FORM_CELL_TEMPLATE = Vorlage, die das Layout eines einzelnen Eingabeelements in einem Formular definiert. <p> Die Vorlage muss die Bezeichnung, Eingabe und Fehleranzeige des Eingabeelements anordnen. </p>
 com.top_logic.layout.form.boxes.reactive_tag.Icons.FORM_GROUP_TEMPLATE = Vorlage für ein Formularelement, dass andere Elemente des Forumlars gruppiert. <p> Das Element kann eingeklappt werden um Platz zu sparen.</p>
 com.top_logic.layout.form.boxes.reactive_tag.Icons.LABEL_ABOVE = Ob die Beschriftung über dem Inhalt dargestellt wird.
-com.top_logic.layout.form.boxes.reactive_tag.Icons.RF_HORIZONTAL_GAP_COLUMNS = Horizontaler Abstand zwischen den Spalten in einem Formular. <p> Dieser Wert darf nicht geändert werden, da der kanonische Wert von <code>com.top_logic.layout.structure.Icons#FORM_COLUMN_GAP</code> übernommen wird. </p>
+com.top_logic.layout.form.boxes.reactive_tag.Icons.RF_HORIZONTAL_GAP_COLUMNS = Horizontaler Abstand zwischen den Spalten eines Formulars. <p> Dieser Wert darf nicht geändert werden, da der kanonische Wert von der Theme-Variablen FORM_COLUMN_GAP übernommen wird. </p>
 com.top_logic.layout.form.boxes.tag.BoxLayoutTag$ConfigService = Box-Layout-Generator
 com.top_logic.layout.form.boxes.tag.BoxLayoutTag$ConfigService$Config$LayoutConfig = Layout
 com.top_logic.layout.form.boxes.tag.BoxLayoutTag$ConfigService$Config$LayoutConfig.tooltip = Benannte <i>Box-Layout-Konfiguration</i>.
