--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -2963,7 +2963,7 @@ com.top_logic.layout.form.boxes.reactive_tag.Icons.COLON = Whether a colon is se
 com.top_logic.layout.form.boxes.reactive_tag.Icons.FORM_CELL_TEMPLATE = Template defining the layout of a single input element in a form. <p> The template must arrange the input element's label, input and error display. </p>
 com.top_logic.layout.form.boxes.reactive_tag.Icons.FORM_GROUP_TEMPLATE = Template for a field set box. <p> A field set groups a form and can be potentially collapsed to temporarily safe space. </p>
 com.top_logic.layout.form.boxes.reactive_tag.Icons.LABEL_ABOVE = Whether the label is rendered above the content.
-com.top_logic.layout.form.boxes.reactive_tag.Icons.RF_HORIZONTAL_GAP_COLUMNS = Horizontal gap between columns in a form. <p> This value must not be modified, because the canonical value is taken from <code>com.top_logic.layout.structure.Icons#FORM_COLUMN_GAP</code>. </p>
+com.top_logic.layout.form.boxes.reactive_tag.Icons.RF_HORIZONTAL_GAP_COLUMNS = Horizontal gap between columns in a form. <p> This value must not be modified, because the canonical value is taken from theme variable FORM_COLUMN_GAP. </p>
 com.top_logic.layout.form.boxes.tag.BoxLayoutTag$ConfigService = Configuration service
 com.top_logic.layout.form.boxes.tag.BoxLayoutTag$ConfigService$Config$LayoutConfig = Layout configuration
 com.top_logic.layout.form.boxes.tag.BoxLayoutTag$ConfigService$Config$LayoutConfig.tooltip = Named <i>box layout</i> configuration.
