--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2944,6 +2944,7 @@ com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.collapsed = Gibt a
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.content = Der Inhalt der Gruppe.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.menuButton = Die Schaltfläche zum Öffnen eines Menüs, das zusätzliche Befehle enthält.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.onclick = Skript, das den auf-/zugeklappten Zustand der Gruppe umschaltet, wenn auf die Kopfzeile der Gruppe geklickt wird.
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.ondblclick = Skript, das den Toggle-Klick verhindert, wenn die Kopfzeile einen Doppelklick erhält.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.title = Titel der Gruppe.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.toggleButton = Die Schaltfläche zum auf- und zuklappen der Gruppe.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.collapsible = Ob die Gruppe zugeklappt werden kann.
