--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -2944,6 +2944,7 @@ com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.collapsed = Whethe
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.content = The HTML contents of the group.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.menuButton = The menu button to open a context menu displaying additional commands.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.onclick = Script that toggles the expand/collapsed state of the group when the group header is clicked.
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.ondblclick = Script that prevents the toggle click, if the header receives a double click.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.title = Title of the group.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.toggleButton = The button for toggling the collapsed state of the group.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.collapsible = Whether the group should never be collapsed.
