--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -22,6 +22,10 @@ class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_TITLE = Passwort
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_WELCOME__USER = Willkommen {0}!
 class.com.top_logic.base.search.I18NConstants.SEARCH_STRING_SYNTAX_ERROR_UNCLOSED_PHRASE__PHRASE_INPUT = Unzulässiger Suchbegriff. Die Phrase ''{0}'' in Eingabe ''{1}'' ist nicht geschlossen.
 class.com.top_logic.common.folder.ui.I18NConstants.NO_FOLDER_AVAILABLE = Kein Ordner verfügbar.
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE = Datei
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE.tooltip = Wählen Sie die neue Version der Datei. Die ausgewählte Datei muss den gleichen Namen haben wie die zu aktualisierende Datei.
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG_FILES = Dateien
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG_FILES.tooltip = Wählen Sie Dateien zum Hochladen aus.
 class.com.top_logic.gui.I18NConstants.ERROR_CYCLIC_THEME_HIERARCHY__ID = Das Theme mit der ID "{0}" hat eine zyklische Elternhierarchie.
 class.com.top_logic.gui.I18NConstants.ERROR_REFERENCED_THEME_NOT_DEFINED__ID = Theme-Konfiguration mit ID "{0}" nicht gefunden.
 class.com.top_logic.html.template.I18NConstants.ERROR_DUPLICATE_ATTRIBUTE__NAME_LINE_COL = Doppeltes Attribut "{0}" in Zeile {1}, Spalte {2}.
