Ticket #28411: Added annotation to add ValueListener to attributes.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1102,6 +1102,10 @@ com.top_logic.model.search.providers.TreeTableDragSourceByExpression = Tree tabl
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression.tooltip = <i>Table drag source by expression</i> for tree tables.
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Tree table drop target by expression
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Table drop target</i> for tree tables that can be completely configured using model queries.
+com.top_logic.model.search.providers.ValueListenerByExpression = Value listener with TL-Script
+com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation = Operation
+com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation.tooltip = TL-Script that is executed when the value of the field for the annotated attribute changes. <p> The operation gets four arguments: the object, the old field value, the new field value, and the annotated attribute. </p>
+com.top_logic.model.search.providers.ValueListenerByExpression.tooltip = <i>Value listener</i> that executes a TL-Script expression.
 com.top_logic.model.search.providers.ValueTransformationByExpression = TL-Script transformation
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.aditional-arguments = Aditional arguments
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.aditional-arguments.tooltip = Additional arguments for the given <i>Function</i>.
