--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7058,6 +7058,10 @@ com.top_logic.model.annotate.TLUpdateMode.Mode.USE.tooltip = The classification 
 com.top_logic.model.annotate.TLUpdateMode.tooltip = <i>Annotation</i> specifying how a model is updated, if the application configuration changes.
 com.top_logic.model.annotate.TLUpdateMode.value = Value
 com.top_logic.model.annotate.TLUpdateMode.value.tooltip = How the classification is used and updated.
+com.top_logic.model.annotate.TLValueListeners = Value listeners
+com.top_logic.model.annotate.TLValueListeners.listeners = Listeners
+com.top_logic.model.annotate.TLValueListeners.listeners.tooltip = Listeners to trigger when the <i>form field</i> for the annotated attribute changes its value.
+com.top_logic.model.annotate.TLValueListeners.tooltip = <i>Attribute annotation</i> to annotate value listeners to the field created for an attribute.
 com.top_logic.model.annotate.TLVisibility = Visibility
 com.top_logic.model.annotate.TLVisibility.tooltip = Annotation that defines the default <i>visibility</i> of a <i>model part</i>.
 com.top_logic.model.annotate.TLVisibility.value = Value
