--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6960,6 +6960,8 @@ com.top_logic.model.annotate.InstancePresentation.tooltip = Konfigurationsoption
 com.top_logic.model.annotate.LabelPosition = Position der Bezeichnung
 com.top_logic.model.annotate.LabelPosition.ABOVE = Über dem Wert
 com.top_logic.model.annotate.LabelPosition.ABOVE.tooltip = Die Bezeichnung wird in einer separaten Zeile oberhalb des Wertes wiedergegeben. <p> Dies ist bei mehrzeiligen Werten nützlich, da der sonst leere Platz in der Spalte Bezeichnung auch für den Wert verwendet werden kann. </p>
+com.top_logic.model.annotate.LabelPosition.ABOVE_INPUT = Über Eingabefeld
+com.top_logic.model.annotate.LabelPosition.ABOVE_INPUT.tooltip = Platziert die Bezeichnung in einer separaten Zeile über dem Eingabeelement im Bearbeitungsmodus, verwendet aber die Standardplatzierung vor dem Wert im Ansichtsmodus.
 com.top_logic.model.annotate.LabelPosition.AFTER_VALUE = Nach dem Wert
 com.top_logic.model.annotate.LabelPosition.AFTER_VALUE.tooltip = Es gibt eine einzige Zelle für Bezeichnung und Wert, und die Bezeichnung wird nach dem entsprechenden Wert wiedergegeben. <p> Dies ist nützlich für sehr kurze Eingabeelemente wie z. B. Kontrollkästchen. </p>
 com.top_logic.model.annotate.LabelPosition.DEFAULT = Automatisch
