--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6960,6 +6960,8 @@ com.top_logic.model.annotate.InstancePresentation.tooltip = Configuration option
 com.top_logic.model.annotate.LabelPosition = Label position
 com.top_logic.model.annotate.LabelPosition.ABOVE = Above value
 com.top_logic.model.annotate.LabelPosition.ABOVE.tooltip = Label is rendered in a separate line above the value. <p> This is useful for multi-line values, because the otherwise emty space in the label column can be used for the value, too. </p>
+com.top_logic.model.annotate.LabelPosition.ABOVE_INPUT = Above input
+com.top_logic.model.annotate.LabelPosition.ABOVE_INPUT.tooltip = Places the label in a separate line above the input element in edit mode but use default placement before the value in view mode.
 com.top_logic.model.annotate.LabelPosition.AFTER_VALUE = After value
 com.top_logic.model.annotate.LabelPosition.AFTER_VALUE.tooltip = There is a single cell for label and value, and the label is rendered after the corresponding value. <p> This is useful for very short input elements such as checkboxes. </p>
 com.top_logic.model.annotate.LabelPosition.DEFAULT = Automatic
