Ticket #28310: implement defaultOperation specified in Participant

--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
@@ -111,7 +111,7 @@ model.tl.bpe.bpml.ParallelGateway = ParallelGateway
 model.tl.bpe.bpml.Participant = Participant
 model.tl.bpe.bpml.Participant.collaboration = Collaboration
 model.tl.bpe.bpml.Participant.defaultOperation = Standardoperation
-model.tl.bpe.bpml.Participant.defaultOperation.tooltip = Operation, die bei jedem Schritt im Workflow zusätzlich ausgeführt wird.\n\nDie Funktion erhält drei Argumente, das Prozessobjekt, die alte Aufgabe und die neue Aufgabe (sofern vorhanden). Werden mehrere parallele Aufgaben gestartet, ist das dritte Argument eine Menge mit allen Folgeaufgaben.\n\nWenn die Prozessdurchführung auf einen End-Event trifft, wird keine neue Aufgabe angelegt.
+model.tl.bpe.bpml.Participant.defaultOperation.tooltip = Operation, die bei jedem Schritt im Workflow zusätzlich ausgeführt wird.\n\nDie Funktion erhält vier Argumente, das Prozessobjekt, die alte Aufgabe, die neue Aufgabe (sofern vorhanden) und die Formulardaten des Auswahldialogs für die nächste Aufgabe. Ist für den Übergang kein Formulartyp definiert, ist das letzte Argument null. Werden mehrere parallele Aufgaben gestartet, ist das dritte Argument eine Menge mit allen Folgeaufgaben.\n\nWenn die Prozessdurchführung auf einen End-Event trifft, wird keine neue Aufgabe angelegt.
 model.tl.bpe.bpml.Participant.displayDescription = Darstellung
 model.tl.bpe.bpml.Participant.dynamicName = Test-ID
 model.tl.bpe.bpml.Participant.dynamicName.tooltip = Funktion, welche für automatisierte Tests eine ID für eine Aufgabe berechnet.
