--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
@@ -113,7 +113,7 @@ model.tl.bpe.bpml.ParallelGateway = ParallelGateway
 model.tl.bpe.bpml.Participant = Participant
 model.tl.bpe.bpml.Participant.collaboration = Collaboration
 model.tl.bpe.bpml.Participant.defaultOperation = Default operation
-model.tl.bpe.bpml.Participant.defaultOperation.tooltip = Operation that is executed additionally at each step in the workflow. The function receives three arguments, the process object, the old task and the new task (if available). If several parallel tasks are started, the third argument is a set with all subsequent tasks. If the process execution encounters an end event, no new task is created.
+model.tl.bpe.bpml.Participant.defaultOperation.tooltip = Operation that is executed additionally at each step in the workflow. The function receives four arguments, the process object, the old task, the new task (if available) and the form data of the selection dialog for the next task. If no form type is defined for the transition, the last argument is zero. If several parallel tasks are started, the third argument is a set with all subsequent tasks. If the process execution encounters an end event, no new task is created.
 model.tl.bpe.bpml.Participant.displayDescription = Display description
 model.tl.bpe.bpml.Participant.dynamicName = Test ID
 model.tl.bpe.bpml.Participant.dynamicName.tooltip = Function computing an identifier of a task used in test scripts.
