--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -6,6 +6,7 @@ class.com.top_logic.bpe.layout.execution.command.I18NConstants.EDGE_OPTION_LABEL
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.EDGE_OPTION_LABEL_CANCEL = Vorgang beenden
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.EDGE_OPTION_NO_NAME = (Weiter)
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.IMPOSSIBLE_EDGE = ! {0}
+class.com.top_logic.bpe.layout.execution.command.I18NConstants.MULTIPLE_ERRORS_MESSAGE = Mit dieser Auswahl sind mehrere Fehler verbunden.
 com.top_logic.bpe.bpml.display.DisplayDescription = Beschreibung anzeigen
 com.top_logic.bpe.bpml.display.DisplayDescription$AttributePart = Attribut-Teil
 com.top_logic.bpe.bpml.display.DisplayDescription$AttributePart.tooltip = Eine Referenz auf ein einzelnes angezeigtes Attribut.
@@ -54,10 +55,22 @@ com.top_logic.bpe.bpml.display.ProcessFormDefinition = Definition des Prozessfor
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Darstellung
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Formular für diesen Prozessschritt. <p> Dieses Formular wird einem Benutzer angezeigt, der als Bearbeiter für diesen Prozessschritt zugewiesen ist. </p> <p> Wenn hier nichts konfiguriert ist, wird das Standardformular des Prozessmodelltyps in diesem Schritt angezeigt. Durch Setzen dieser Eigenschaft können Sie entweder ein vollständig benutzerdefiniertes Formular definieren oder das Standardformular bzw. das Formular eines anderen Prozessschritts anpassen. </p>
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.tooltip = Konfigurationswert, der das Formular zur Anzeige des Prozessmodells für einen Akteur eines Prozessschritts beschreibt. <p> Dieser Konfigurationstyp wird als Typ eines Attributs eines <i>manuellen Tasks</i> verwendet, um das Formular für diesen Task zu definieren. </p>
+com.top_logic.bpe.bpml.display.RuleType = Regel-Typ
+com.top_logic.bpe.bpml.display.RuleType.DEFAULT = Standard
+com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = Dies ist die Standardbedingung mit einer Fehlermeldung.
+com.top_logic.bpe.bpml.display.RuleType.HIDDEN = Versteckt
+com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = Dies ist eine besondere Bedingung, bei der der {SequenceFlow} ausgeblendet wird.
+com.top_logic.bpe.bpml.display.RuleType.WARNING = Warnung
+com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = Dies ist eine besondere Bedingung, bei der eine Warnmeldung angezeigt wird, bevor mit dem nächsten Knoten fortgefahren wird.
+com.top_logic.bpe.bpml.display.RuleType.tooltip = Definiert die Arten von Bedingungen, die auf Sequenzflüsse angewendet werden können.
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation = Formulartypberechnung über TL-Script
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.Config.function = Funktion
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.Config.function.tooltip = Funktion, die den Typ der Objekte berechnet, für die ein Formular erstellt werden soll. <p> Es wird erwartet, dass der Ausdruck das Modell der Komponente als einziges Argument akzeptiert. </p>
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.tooltip = <i>Formtypauflöser</i>, implementiert durch eine TL-Script-Funktion.
+com.top_logic.bpe.bpml.display.SequenceFlowRule = Sequenzflussregel
+com.top_logic.bpe.bpml.display.SequenceFlowRule.rule-conditions = Bedingungen
+com.top_logic.bpe.bpml.display.SequenceFlowRule.rule-conditions.tooltip = Ruft die Liste der Regelbedingungen ab, die für diesen Sequenzfluss gelten.
+com.top_logic.bpe.bpml.display.SequenceFlowRule.tooltip = Definiert Konfigurationsregeln für Sequenzflüsse bei der Ausführung von Geschäftsprozessen. Verwaltet Bedingungen, die das Verhalten und die Übergänge von Prozessabläufen bestimmen.
 com.top_logic.bpe.bpml.display.SpecializedForm = Spezialisiertes Formular
 com.top_logic.bpe.bpml.display.SpecializedForm.Config.form = Formular
 com.top_logic.bpe.bpml.display.SpecializedForm.Config.form.tooltip = Das benutzerdefinierte Formular für den aktuellen Prozessschritt.
@@ -76,6 +89,14 @@ com.top_logic.bpe.bpml.display.StandardForm.Config.overlays.tooltip = Anpassunge
 com.top_logic.bpe.bpml.display.StandardForm.Config.source-task = Wie bei Aufgabe
 com.top_logic.bpe.bpml.display.StandardForm.Config.source-task.tooltip = ID einer anderen Aufgabe, von der die Formulardefinition übernommen werden soll. <p> Wenn nicht angegeben, wird das Standardformular des Prozessmodelltyps als Quelle für die Anpassung verwendet. </p> <p> Stellen Sie sicher, dass Sie in dieser Referenz keine Zyklen definieren. </p>
 com.top_logic.bpe.bpml.display.StandardForm.tooltip = <i>Definition des Aufgabenformulars</i> unter Verwendung des Standardformulars des <i>Prozessausführungsobjekts</i> oder des Formulars einer anderen, mit Sichtbarkeitsannotationen angepassten Aufgabe.
+com.top_logic.bpe.bpml.display.StandardRule = Standardregel
+com.top_logic.bpe.bpml.display.StandardRule.Config.condition = Zustand
+com.top_logic.bpe.bpml.display.StandardRule.Config.condition.tooltip = Der <i>Ausdruck</i>, der verwendet wird, um zu berechnen, ob der <i>Sequenzfluss</i> zugänglich ist. <p> Der <i>Ausdruck</i> verwendet die <i>Prozessausführung</i> als einziges Argument. </p> <p> Als Rückgabe wird ein <i>Boolescher Wert</i> erwartet. </p>
+com.top_logic.bpe.bpml.display.StandardRule.Config.message = Nachricht
+com.top_logic.bpe.bpml.display.StandardRule.Config.message.tooltip = Der <i>Ressourcenschlüssel</i>, der angezeigt werden soll, wenn die Bedingung nicht erfüllt ist.
+com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type = Regel-Typ
+com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type.tooltip = Legt den Typ der zu verwendenden Regel fest. <p> Standard - Wenn false, können wir nicht auf diesen <i>Sequenzfluss</i> zugreifen und erhalten eine benutzerdefinierte Fehlermeldung. </p> <p> Ausgeblendet - Wenn falsch, können wir den <i>Sequenzfluss</i> nicht sehen. </p> <p> Warnung - Wenn falsch, kann auf diesen <i>Sequenzfluss</i> zugegriffen werden, es wird jedoch ein Popup mit einer benutzerdefinierten Warnmeldung angezeigt. </p>
+com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>SequenceFlow Rule Definition</i>, die festlegt, ob und unter welchen Umständen auf einen <i>Sequenzfluss</i> zugegriffen werden kann oder nicht.
 com.top_logic.bpe.bpml.display.TemplateBuilder = Erbauer von Vorlagen
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Funktion
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = NICHT VERWENDEN!
@@ -128,6 +149,12 @@ com.top_logic.bpe.layout.execution.start.ConstantStartEvent.Config.process-name.
 com.top_logic.bpe.layout.execution.start.ConstantStartEvent.Config.start-event-name = Name der Startereignisses
 com.top_logic.bpe.layout.execution.start.ConstantStartEvent.Config.start-event-name.tooltip = Der Name des Startereignisses. <p> Wird er nicht angegeben, wird davon ausgegangen, dass der Prozess nur ein einziges Startereignis hat, das verwendet wird. </p>
 com.top_logic.bpe.layout.execution.start.ConstantStartEvent.tooltip = <i>Startereignis-Selektor</i>, der ein konstantes Startereignis verwendet, das durch den Prozessnamen und optional den Ereignisnamen angegeben wird.
+com.top_logic.bpe.layout.execution.start.DynamicStartEvent = Dynamisches Startereignis
+com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.context = Kontext
+com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.context.tooltip = Die Angabe des zu bearbeitenden Kontextobjekts. <p> Die Auswertung des konfigurierten <i>Kanals der Komponente</i> wird als Kontextobjekt an die Befehlsausführung übergeben. </p> <p> Wenn nichts konfiguriert ist, wird standardmäßig das Modell der Komponente als Zielmodell für den ausgeführten Befehl verwendet. </p>
+com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.function = Funktion
+com.top_logic.bpe.layout.execution.start.DynamicStartEvent.Config.function.tooltip = Der <i>Ausdruck</i>, der zur Berechnung des <i>Startereignisses</i> verwendet wird. <p> Der <i>Ausdruck</i> verwendet den Kontext als einziges Argument. </p> <p> Als Rückgabe wird ein <i>Startereignis</i> erwartet. </p>
+com.top_logic.bpe.layout.execution.start.DynamicStartEvent.tooltip = <i>Selektor für das Startereignis</i>, der ein dynamisches Startereignis unter Verwendung einer Funktion mit gegebenem Kontext berechnet.
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming$BPMLObjectName = BPML-Objektname
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming$BPMLObjectName.tooltip = <i>Modellname</i> der <i>Benennung des BPML-Objekts</i>.
 com.top_logic.bpe.layout.scripting.BPMLObjectNaming.BPMLObjectName.node-path = Knoten-Pfad
