--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3669,6 +3669,10 @@ com.top_logic.layout.form.values.edit.annotation.ItemDisplay.ItemDisplayType.VAL
 com.top_logic.layout.form.values.edit.annotation.ItemDisplay.tooltip = Annotation, die angibt, wie die UI für eine <i>Artikeleigenschaft</i> erstellt wird. <p> Standardmäßig wird eine Artikeleigenschaft als Gruppe angezeigt, die die Konfiguration dieses Artikels enthält. Aber insbesondere bei <i>Formatierungseigenschaften</i> kann es sinnvoll sein, nur die Auswahl zwischen vorkonfigurierten Optionen zuzulassen. </p> <p> Die Annotation kann an der Eigenschaft oder an ihrem Werttyp angegeben werden. </p>
 com.top_logic.layout.form.values.edit.annotation.ItemDisplay.value = Wert
 com.top_logic.layout.form.values.edit.annotation.ItemDisplay.value.tooltip = So zeigen Sie <i>Elementeigenschaften</i> an.
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning = Positionierung der Bezeichnung
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning.tooltip = <i>Annotation</i> für <i>Eigenschaftsdeskriptoren</i>, um die <i>Position</i> einer <i>Bezeichnung</i> zu vermerken.
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning.value = Wert
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning.value.tooltip = Die Position, an der die Bezeichnung relativ zum Wert platziert werden soll.
 com.top_logic.layout.form.values.edit.annotation.OptionLabels = Optionsetiketten
 com.top_logic.layout.form.values.edit.annotation.OptionLabels.tooltip = Annotation einer <i>Bezeichnung für die Berechnung</i> einer Eigenschaft des <i>Konfigurationselements</i>, die für die Anzeige seiner Optionen verwendet wird. <p> Die Annotation kann an der Eigenschaft oder an ihrem Werttyp angegeben werden. </p> <p> Die Optionen für eine Eigenschaft können mit der Annotation <i>options</i> angegeben werden. Wenn Optionen und die endgültige Auswahl von unterschiedlichem Typ sind (z. B. weil eine <i>Abbildung</i> angegeben ist), muss die für die Eigenschaft angegebene Bezeichnung sowohl den Optionstyp als auch den Auswahltyp berücksichtigen. </p>
 com.top_logic.layout.form.values.edit.annotation.OptionLabels.value = Wert
