--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3669,6 +3669,10 @@ com.top_logic.layout.form.values.edit.annotation.ItemDisplay.ItemDisplayType.VAL
 com.top_logic.layout.form.values.edit.annotation.ItemDisplay.tooltip = Annotation specifying how create the UI for an <i>item</i> property. <p> By default, an item property is displayed as a group containing the configuration of that item. But especially for <i>instance format</i> properties, it may be useful to only allow selecting between pre-configured options. </p> <p> The annotation can be specified at the property or at its value type. </p>
 com.top_logic.layout.form.values.edit.annotation.ItemDisplay.value = Value
 com.top_logic.layout.form.values.edit.annotation.ItemDisplay.value.tooltip = How to display <i>item</i> properties.
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning = Label positioning
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning.tooltip = <i>Annotation</i> for <i>property descriptors</i> to annotate a <i>label position</i>.
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning.value = Value
+com.top_logic.layout.form.values.edit.annotation.LabelPositioning.value.tooltip = The positon where to place the label relative to the value.
 com.top_logic.layout.form.values.edit.annotation.OptionLabels = Option labels
 com.top_logic.layout.form.values.edit.annotation.OptionLabels.tooltip = Annotates a <i>label provider</i> to a <i>configuration item</i> property used for displaying its options. <p> The annotation can be specified at the property or at its value type. </p> <p> The options for a property can be specified using the <i>options</i> annotation. When options and the final selection are of different type (e.g. because a <i>mapping</i> is specified), the label provider specified for the property must deal with both, the option type and the selection type. </p>
 com.top_logic.layout.form.values.edit.annotation.OptionLabels.value = Value
