Ticket #28423: add missing references

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.folder.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.folder.messages_en.properties
@@ -1,12 +1,15 @@
 model.tl.folder = Document management
 model.tl.folder.Document = Document
+model.tl.folder.Document.docVersion = Document version
 model.tl.folder.Document.name = Name
 model.tl.folder.Document.size = Size
 model.tl.folder.Document.versionNumber = Version
 model.tl.folder.DocumentVersion = Document version
+model.tl.folder.DocumentVersion.description = Description
 model.tl.folder.DocumentVersion.doc = Document
 model.tl.folder.DocumentVersion.revision = Revision
 model.tl.folder.WebFolder = Document folder
+model.tl.folder.WebFolder.content = Content
 model.tl.folder.WebFolder.description = Description
 model.tl.folder.WebFolder.folderType = Folder Type
 model.tl.folder.WebFolder.name = Name
