--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.folder.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.folder.messages_de.properties
@@ -1,12 +1,15 @@
 model.tl.folder = Dokumentenmanagement
 model.tl.folder.Document = Dokument
+model.tl.folder.Document.docVersion = Dokumentenversion
 model.tl.folder.Document.name = Name
 model.tl.folder.Document.size = Größe
 model.tl.folder.Document.versionNumber = Version
 model.tl.folder.DocumentVersion = Dokumentenversion
+model.tl.folder.DocumentVersion.description = Beschreibung
 model.tl.folder.DocumentVersion.doc = Dokument
 model.tl.folder.DocumentVersion.revision = Revision
 model.tl.folder.WebFolder = Dokumentenordner
+model.tl.folder.WebFolder.content = Inhalt
 model.tl.folder.WebFolder.description = Beschreibung
 model.tl.folder.WebFolder.folderType = Ordnertyp
 model.tl.folder.WebFolder.name = Name
