Ticket #28298: Added separate type for representative groups.
This allows for easy customization of the rule who is allowed to be
assigned as a representative for another account.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.accounts.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.accounts.messages_de.properties
@@ -26,7 +26,7 @@ model.tl.accounts.Person.contact = Personendaten
 model.tl.accounts.Person.country = Land
 model.tl.accounts.Person.country.tooltip = Das Land in dem der Nutzer sich befindet.
 model.tl.accounts.Person.deputyFor = Stellvertreter für
-model.tl.accounts.Person.deputyFor.tooltip = Die anderen Zugang, deren Berechtigungen der dieser Zugang erbt.
+model.tl.accounts.Person.deputyFor.tooltip = Die anderen Zugänge, deren Berechtigungen dieser Zugang erbt.
 model.tl.accounts.Person.firstName = Vorname
 model.tl.accounts.Person.groups = Gruppen
 model.tl.accounts.Person.language = Sprache
@@ -42,6 +42,9 @@ model.tl.accounts.Person.timezone = Zeitzone
 model.tl.accounts.Person.timezone.tooltip = Die Zeitzone in der der Benutzer lebt. Datums- und Uhrzeitwerte die nutzerspezifisch angezeigt werden, werden in dieser Zeitzone angezeigt.
 model.tl.accounts.Person.unusedNotified = Benachrichtigung bei Inaktivität
 model.tl.accounts.Person.wasAlive = Aktiv
+model.tl.accounts.RepresentativeGroup = Stellvertretergruppe
+model.tl.accounts.RepresentativeGroup.members = Stellvertreter
+model.tl.accounts.RepresentativeGroup.tooltip = Technischer Typ, der verwendet wird, um die Stellvertreter eines Nutzers zu repräsentieren.
 model.tl.accounts.Role = Rolle
 model.tl.accounts.Role.description = Beschreibung
 model.tl.accounts.Role.isSystem = System
