--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.accounts.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.accounts.messages_en.properties
@@ -26,7 +26,7 @@ model.tl.accounts.Person.contact = Contact data
 model.tl.accounts.Person.country = Country
 model.tl.accounts.Person.country.tooltip = The country in which the user is located.
 model.tl.accounts.Person.deputyFor = Deputy for
-model.tl.accounts.Person.deputyFor.tooltip = The other accounts whose authorizations are inherited by this account.
+model.tl.accounts.Person.deputyFor.tooltip = The other accounts whose access rights are inherited by this account.
 model.tl.accounts.Person.firstName = First name
 model.tl.accounts.Person.groups = Groups
 model.tl.accounts.Person.language = Language
@@ -42,6 +42,9 @@ model.tl.accounts.Person.timezone = Time zone
 model.tl.accounts.Person.timezone.tooltip = The time zone in which the user lives. Date and time values that are displayed user-specifically are displayed in this time zone.
 model.tl.accounts.Person.unusedNotified = Notification of
 model.tl.accounts.Person.wasAlive = Active
+model.tl.accounts.RepresentativeGroup = Representative group
+model.tl.accounts.RepresentativeGroup.members = Representatives
+model.tl.accounts.RepresentativeGroup.tooltip = Technical type used to store the representatives for an account.
 model.tl.accounts.Role = Role
 model.tl.accounts.Role.description = Description
 model.tl.accounts.Role.isSystem = System
