--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1877,7 +1877,7 @@ com.top_logic.element.model.migration.model.refactor.ChangeLinkReferenceProcesso
 com.top_logic.element.model.migration.model.refactor.ChangeLinkReferenceProcessor.tooltip = <i>Migrationsprozessor</i>, der die <i>Referenz</i> von in polymorphen Link-Tabellen gespeicherten Links ändert.
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor = Objekttyp ändern
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.source-type = Quelle: Typ
-com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.source-type.tooltip = Der Typ der Objekte, die geändert werden sollen.
+com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.source-type.tooltip = Der Typ der Objekte, die geändert werden sollen. <p> Wird er nicht angegeben, werden alle in <i>Table</i> gespeicherten Objekte geändert. </p>
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.table = Tabelle
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.table.tooltip = Der Name der Tabelle, in der die Objekte des Quelltyps gespeichert sind.
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.target-type = Zieltyp
@@ -1887,7 +1887,7 @@ com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsType
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.association-table = Assoziationstabelle
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.association-table.tooltip = Datenbankname der Assoziationstabelle der angegebenen Referenz.
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.reference = Referenz
-com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.reference.tooltip = Qualifizierter Name der Referenz, deren referenzierte Objekte geändert werden sollen.
+com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.reference.tooltip = Qualifizierter Name der Referenz, deren referenzierte Objekte geändert werden sollen. <p> Wenn nicht angegeben, werden alle Verweise in der <i>Tabelle Association</i> verwendet. </p>
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.source-type = Quelle: Typ
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.source-type.tooltip = Der Typ der Objekte, die geändert werden sollen.
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.table = Tabelle
@@ -2146,5 +2146,7 @@ com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.Config.schema.tool
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.tooltip = <i>Modellbauer auflisten</i>, der Verweise auf eine bestimmte Tabelle findet.
 com.top_logic.element.util.model.ElementCompatibilityService = Dienst für Elementkompatibilität
 com.top_logic.element.util.model.ElementCompatibilityService.tooltip = Com.top_logic.element Variante des <i>Kompatibilitätsdienstes</i>.
+com.top_logic.element.util.model.ElementGroupManager = Elementgruppenleiter
+com.top_logic.element.util.model.ElementGroupManager.tooltip = <i>Erster Gruppenmanager</i>, der auch Rollenzuweisungen an Einzelpersonen vornimmt.
 com.top_logic.element.util.model.ElementModelService = Dienst Elementmodell
 com.top_logic.element.util.model.ElementModelService.tooltip = <i>Modelldienst</i> für das <i>Modell</i> auf der Grundlage der <i>Geschäftsobjekttypen</i> und der <i>strukturierten Typen</i>.
