--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1877,7 +1877,7 @@ com.top_logic.element.model.migration.model.refactor.ChangeLinkReferenceProcesso
 com.top_logic.element.model.migration.model.refactor.ChangeLinkReferenceProcessor.tooltip = <i>Migration processor</i> that changes the <i>reference</i> of links stored in polymorphic link tables.
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor = Change object type processor
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.source-type = Source type
-com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.source-type.tooltip = The type of the objects that should be changed.
+com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.source-type.tooltip = The type of the objects that should be changed. <p> If not given, all objects stored in <i>Table</i> are changed. </p>
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.table = Table
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.table.tooltip = The name of the table, where the objects of the source type are stored.
 com.top_logic.element.model.migration.model.refactor.ChangeObjectTypeProcessor.Config.target-type = Target type
@@ -1887,7 +1887,7 @@ com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsType
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.association-table = Association table
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.association-table.tooltip = Database name of the association table of the given reference.
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.reference = Reference
-com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.reference.tooltip = Qualified name of the reference of whose referenced objects should be changed.
+com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.reference.tooltip = Qualified name of the reference of whose referenced objects should be changed. <p> If not given, all links in <i>Association table</i> are used. </p>
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.source-type = Source type
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.source-type.tooltip = The type of the objects that should be changed.
 com.top_logic.element.model.migration.model.refactor.ChangeReferencedObjectsTypeProcessor.Config.table = Table
@@ -2146,5 +2146,7 @@ com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.Config.schema.tool
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.tooltip = <i>List model builder</i> that finds references to a given table.
 com.top_logic.element.util.model.ElementCompatibilityService = Element compatibility service
 com.top_logic.element.util.model.ElementCompatibilityService.tooltip = Com.top_logic.element variant of <i>compatibility service</i>.
+com.top_logic.element.util.model.ElementGroupManager = Element group manager
+com.top_logic.element.util.model.ElementGroupManager.tooltip = <i>Initial group manager</i> that does also role assignments on singletons.
 com.top_logic.element.util.model.ElementModelService = Element model service
 com.top_logic.element.util.model.ElementModelService.tooltip = <i>Model service</i> for <i>model</i> based on <i>business object type</i> and <i>structured type part</i>.
